--- a/tools/HxD.ini
+++ b/tools/HxD.ini
@@ -38,11 +38,13 @@ Size=10
 Style=00
 
 [\HistoryLists\RecentFiles\]
-Count=6
-Item0=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\imagen.bmp
-Item1=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\assets\square-blue.bmp
-Item2=C:\Users\eloir\Desktop\1.png
-Item3=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\assets\square-red.bmp
-Item4=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\example.bmp
-Item5=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\combined.bmp
+Count=8
+Item0=C:\Users\OEM\Desktop\filtros\project-bmpPic\assets\draw.bmp
+Item1=C:\Users\OEM\Desktop\filtros\project-bmpPic\imagen.bmp
+Item2=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\imagen.bmp
+Item3=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\assets\square-blue.bmp
+Item4=C:\Users\eloir\Desktop\1.png
+Item5=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\assets\square-red.bmp
+Item6=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\example.bmp
+Item7=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\combined.bmp
 
