13/05/19 no sirve el blur

--- a/tools/HxD.ini
+++ b/tools/HxD.ini
@@ -38,13 +38,14 @@ Size=10
 Style=00
 
 [\HistoryLists\RecentFiles\]
-Count=8
-Item0=C:\Users\OEM\Desktop\filtros\project-bmpPic\assets\draw.bmp
+Count=9
+Item0=C:\Users\OEM\Desktop\filtros\project-bmpPic\assets\Minnie.bmp
 Item1=C:\Users\OEM\Desktop\filtros\project-bmpPic\imagen.bmp
-Item2=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\imagen.bmp
-Item3=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\assets\square-blue.bmp
-Item4=C:\Users\eloir\Desktop\1.png
-Item5=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\assets\square-red.bmp
-Item6=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\example.bmp
-Item7=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\combined.bmp
+Item2=C:\Users\OEM\Desktop\filtros\project-bmpPic\assets\draw.bmp
+Item3=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\imagen.bmp
+Item4=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\assets\square-blue.bmp
+Item5=C:\Users\eloir\Desktop\1.png
+Item6=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\assets\square-red.bmp
+Item7=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\example.bmp
+Item8=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\combined.bmp
 
