--- a/tools/HxD.ini
+++ b/tools/HxD.ini
@@ -38,9 +38,10 @@ Size=10
 Style=00
 
 [\HistoryLists\RecentFiles\]
-Count=4
-Item0=C:\Users\eloir\Desktop\1.png
-Item1=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\assets\square-red.bmp
-Item2=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\example.bmp
-Item3=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\combined.bmp
+Count=5
+Item0=C:\wamp64\www\project-bmpPic\assets\processed\ppp.BMP
+Item1=C:\Users\eloir\Desktop\1.png
+Item2=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\project-bmpPic\assets\square-red.bmp
+Item3=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\example.bmp
+Item4=C:\Users\eloir\OneDrive - ITESO\SEMESTRE 2\ESI3127G - PROGRAMACION ESTRUCTURADA\Proyecto\combined.bmp
 
